syntax = "proto3";

package pb;
option go_package = "user_auth_microservice/pb;pb";

service AuthService {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc UpdateUserDetails (UpdateUserDetailsRequest) returns (UpdateUserDetailsResponse);
}

message RegisterRequest {
  string username = 1;
  string password = 2;
}

message RegisterResponse {
  string message = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message UpdateUserDetailsRequest {
  int32  id = 1;
  string username = 2;
  string name = 3;
  string lastname = 4;
  int32 dni = 5;
  string address = 6;
  int32 postal_code = 7;
  int32 phone = 8;
}

message UpdateUserDetailsResponse {
  string message = 1;
}